[package]
name = "multiple_file_downloader"
version = "0.1.0"
authors = ["Dipesh Kafle <dipesh.kaphle111@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.0", features=["blocking"]}
